# peach-cli

./: .gitignore  AI_POLICY.md  CHANGELOG.md  CONTRIBUTING.md  Justfile  NOTICE.md  README.md  UPSTREAM_README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  pull_request_template.md
.github/workflows/: test.yml
knowledge/plans/: 2026-04-23-peach-rewrite.md
src/peach/: __init__.py  __main__.py  _path_fuzzy_search.py  about.py  agent_schema.py  agents.py  app.py  cli.py  constants.py  conversation_markdown.py  db.py  directory.py  directory_suggester.py  directory_watcher.py  format_path.py  gist.py  history.py  messages.py  path_complete.py  paths.py  protocol.py  session_tracker.py  settings.py  settings_schema.py  twitter.py  version.py
src/peach/acp/: agent.py  api.py  messages.py  prompt.py
src/peach/ansi/: __init__.py  _ansi.py
src/peach/screens/: action_modal.py  confirm_modal.py  main.py  permissions.py  session_resume_modal.py  sessions.py  settings.py  startup_picker.py
src/peach/visuals/: columns.py
src/peach/widgets/: acp_content.py  active_session_cards.py  agent_response.py  command_pane.py  condensed_path.py  conversation.py  danger_warning.py  diff_view.py  directory_input.py  flash.py  grid_select.py  markdown_note.py  menu.py  note.py  path_search.py  plan.py  project_directory_tree.py  prompt.py  (+14 more)
tests/: test_cli.py  test_cli_claude_only.py  test_db.py  test_db_migration.py  test_main_screen.py  test_no_shell.py  test_paths.py  test_resume_roundtrip.py  test_startup_picker.py  test_tab_title_on_resume.py
