[project]
name = "peach"
version = "0.6.16"
description = "Peach CLI — Claude Code ACP client for Windows, macOS, and Linux (toad cli for win)."
readme = "README.md"
license = { text = "AGPL-3.0-only" }
authors = [
    { name = "Niclas Edge" },
]
requires-python = ">=3.14"
dependencies = [
    "textual[syntax]>=8.2.4",
    "click>=8.2.1",
    "tree-sitter>=0.24.0",
    "httpx>=0.28.1",
    "platformdirs>=4.9.4",
    "rich>=15.0.0",
    "typeguard==4.4.4",
    "textual-serve>=1.1.2",
    "textual-speedups==0.2.1",
    "packaging>=25.0",
    "bashlex>=0.18",
    "pathspec>=0.12.1",
    "notify-py>=0.3.43",
    "pyperclip>=1.11.0",
    "watchdog>=6.0.0",
    "setproctitle>=1.3.7",
    "psutil>=7.2.1",
    "aiosqlite>=0.22.1",
    "textual-diff-view==0.1.3",
]

[tool.uv.workspace]
members = ["peach"]

[tool.uv.sources]
#textual-serve = { path = "../textual-serve", editable = true }
#textual = { path = "../textual", editable = true }
#textual-dev = { path = "../textual-dev", editable = true }
#rich = { path = "../rich", editable = true }

[project.scripts]
peach = "peach.cli:main"

[build-system]
requires = ["hatchling==1.28.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/peach"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pyinstrument>=5.1.1",
    "textual-dev>=1.8.0",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-textual-snapshot>=1.1",
    "syrupy>=4.7",
]
